[tool.poetry]
name = "evm"
version = "0.1.0"
description = "EVM low-level simple compiler written in python"
authors = ["Thomas ZAMOJSKI <thomas.zamojski@quadratic-labs.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
